syntax = "proto3";

package cloudstorage;

// ============================================================================
// Authentication Service
// ============================================================================
service AuthService {
  rpc SendOTP (SendOTPRequest) returns (SendOTPResponse);
  rpc VerifyOTP (VerifyOTPRequest) returns (VerifyOTPResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Enroll (EnrollRequest) returns (EnrollResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message SendOTPRequest {
  string email = 1;
}

message SendOTPResponse {
  bool success = 1;
  string message = 2;
}

message VerifyOTPRequest {
  string email = 1;
  string otp = 2;
}

message VerifyOTPResponse {
  bool success = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string session_token = 3;
  string user_id = 4;
}

message EnrollRequest {
  string email = 1;
  string full_name = 2;
}

message EnrollResponse {
  bool success = 1;
  string message = 2;
  string session_token = 3;
  string user_id = 4;
}

message LogoutRequest {
  string session_token = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

// ============================================================================
// File Service
// ============================================================================
service FileService {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile (DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
  rpc GetFileMetadata (FileMetadataRequest) returns (FileMetadataResponse);
  rpc CreateFolder (CreateFolderRequest) returns (CreateFolderResponse);
  rpc ShareFile (ShareFileRequest) returns (ShareFileResponse);
  rpc GetSharedFiles (GetSharedFilesRequest) returns (GetSharedFilesResponse);
}

message UploadFileRequest {
  oneof data {
    FileMetadata metadata = 1;
    bytes chunk_data = 2;
  }
}

message FileMetadata {
  string session_token = 1;
  string filename = 2;
  int64 file_size = 3;
  string mime_type = 4;
  string parent_folder_id = 5;
}

message UploadFileResponse {
  bool success = 1;
  string message = 2;
  string file_id = 3;
  int32 chunks_stored = 4;
}

message DownloadFileRequest {
  string session_token = 1;
  string file_id = 2;
}

message DownloadFileResponse {
  oneof data {
    FileInfo file_info = 1;
    bytes chunk_data = 2;
  }
}

message FileInfo {
  string filename = 1;
  int64 file_size = 2;
  string mime_type = 3;
  int32 total_chunks = 4;
}

message ListFilesRequest {
  string session_token = 1;
  string folder_id = 2;
  bool include_deleted = 3;
}

message ListFilesResponse {
  bool success = 1;
  repeated FileEntry files = 2;
  repeated FolderEntry folders = 3;
}

message FileEntry {
  string file_id = 1;
  string filename = 2;
  int64 file_size = 3;
  string mime_type = 4;
  string created_at = 5;
  string modified_at = 6;
  bool is_shared = 7;
}

message FolderEntry {
  string folder_id = 1;
  string folder_name = 2;
  string created_at = 3;
  int32 file_count = 4;
}

message DeleteFileRequest {
  string session_token = 1;
  string file_id = 2;
  bool permanent = 3;
}

message DeleteFileResponse {
  bool success = 1;
  string message = 2;
}

message FileMetadataRequest {
  string session_token = 1;
  string file_id = 2;
}

message FileMetadataResponse {
  bool success = 1;
  FileEntry file = 2;
  int32 chunk_count = 3;
  string checksum = 4;
}

message CreateFolderRequest {
  string session_token = 1;
  string folder_name = 2;
  string parent_folder_id = 3;
}

message CreateFolderResponse {
  bool success = 1;
  string message = 2;
  string folder_id = 3;
}

message ShareFileRequest {
  string session_token = 1;
  string file_id = 2;
  string share_with_email = 3;
  string permission = 4;
}

message ShareFileResponse {
  bool success = 1;
  string message = 2;
  string share_token = 3;
}

message GetSharedFilesRequest {
  string session_token = 1;
}

message GetSharedFilesResponse {
  bool success = 1;
  repeated SharedFileEntry shared_files = 2;
}

message SharedFileEntry {
  string file_id = 1;
  string filename = 2;
  string shared_by_email = 3;
  string permission = 4;
  string shared_at = 5;
}

// ============================================================================
// Storage Service
// ============================================================================
service StorageService {
  rpc GetStorageInfo (StorageInfoRequest) returns (StorageInfoResponse);
  rpc GetStorageUsage (StorageUsageRequest) returns (StorageUsageResponse);
}

message StorageInfoRequest {
  string session_token = 1;
}

message StorageInfoResponse {
  bool success = 1;
  int64 allocated_bytes = 2;
  int64 used_bytes = 3;
  int64 available_bytes = 4;
  double usage_percentage = 5;
}

message StorageUsageRequest {
  string session_token = 1;
}

message StorageUsageResponse {
  bool success = 1;
  map<string, int64> usage_by_type = 2;
  int32 total_files = 3;
  int32 total_folders = 4;
}

// ============================================================================
// Payment Service
// ============================================================================
service PaymentService {
  rpc GetStorageTiers (GetStorageTiersRequest) returns (GetStorageTiersResponse);
  rpc InitiatePayment (InitiatePaymentRequest) returns (InitiatePaymentResponse);
  rpc CheckPaymentStatus (CheckPaymentStatusRequest) returns (CheckPaymentStatusResponse);
  rpc GetPaymentHistory (GetPaymentHistoryRequest) returns (GetPaymentHistoryResponse);
  rpc CancelPayment (CancelPaymentRequest) returns (CancelPaymentResponse);
  rpc ProcessWebhook (WebhookRequest) returns (WebhookResponse);
}

message GetStorageTiersRequest {
  // Empty - returns all active tiers
}

message GetStorageTiersResponse {
  bool success = 1;
  repeated StorageTier tiers = 2;
}

message StorageTier {
  string tier_id = 1;
  string name = 2;
  string display_name = 3;
  int64 storage_bytes = 4;
  int32 price_xaf = 5;
  string description = 6;
}

message InitiatePaymentRequest {
  string session_token = 1;
  string tier_id = 2;
  string provider = 3;  // "mtn_momo" or "orange_money"
  string phone_number = 4;
}

message InitiatePaymentResponse {
  bool success = 1;
  string message = 2;
  string payment_id = 3;
  string transaction_ref = 4;
  string payment_url = 5;  // URL for user to complete payment
  int32 amount_xaf = 6;
}

message CheckPaymentStatusRequest {
  string session_token = 1;
  string payment_id = 2;
}

message CheckPaymentStatusResponse {
  bool success = 1;
  string payment_id = 2;
  string status = 3;  // pending, processing, completed, failed
  string message = 4;
  int64 storage_added = 5;  // bytes added if completed
}

message GetPaymentHistoryRequest {
  string session_token = 1;
  int32 limit = 2;  // Max number of records
}

message GetPaymentHistoryResponse {
  bool success = 1;
  repeated PaymentRecord payments = 2;
}

message PaymentRecord {
  string payment_id = 1;
  string tier_name = 2;
  int32 amount_xaf = 3;
  int64 storage_bytes = 4;
  string provider = 5;
  string status = 6;
  string created_at = 7;
  string completed_at = 8;
}

message CancelPaymentRequest {
  string session_token = 1;
  string payment_id = 2;
}

message CancelPaymentResponse {
  bool success = 1;
  string message = 2;
}

message WebhookRequest {
  string external_ref = 1;
  string status = 2;
  string raw_data = 3;  // JSON string
}

message WebhookResponse {
  bool success = 1;
  string message = 2;
}

// ============================================================================
// Node Service (Internal)
// ============================================================================
service NodeService {
  rpc RegisterNode (RegisterNodeRequest) returns (RegisterNodeResponse);
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
  rpc StoreChunk (StoreChunkRequest) returns (StoreChunkResponse);
  rpc RetrieveChunk (RetrieveChunkRequest) returns (RetrieveChunkResponse);
  rpc DeleteChunk (DeleteChunkRequest) returns (DeleteChunkResponse);
  rpc ListChunks (ListChunksRequest) returns (ListChunksResponse);
}

message RegisterNodeRequest {
  string node_id = 1;
  string host = 2;
  int32 port = 3;
  int64 storage_capacity = 4;
  int32 cpu_cores = 5;
}

message RegisterNodeResponse {
  bool success = 1;
  string message = 2;
}

message HeartbeatRequest {
  string node_id = 1;
  int64 storage_used = 2;
  int32 chunk_count = 3;
}

message HeartbeatResponse {
  bool success = 1;
  string message = 2;
}

message StoreChunkRequest {
  string chunk_id = 1;
  bytes chunk_data = 2;
  string checksum = 3;
}

message StoreChunkResponse {
  bool success = 1;
  string message = 2;
}

message RetrieveChunkRequest {
  string chunk_id = 1;
}

message RetrieveChunkResponse {
  bool success = 1;
  bytes chunk_data = 2;
  string message = 3;
}

message DeleteChunkRequest {
  string chunk_id = 1;
}

message DeleteChunkResponse {
  bool success = 1;
  string message = 2;
}

message ListChunksRequest {
  string node_id = 1;
}

message ListChunksResponse {
  repeated string chunk_ids = 1;
  int32 total_chunks = 2;
}

// ============================================================================
// Admin Service
// ============================================================================
service AdminService {
  rpc GetSystemStatus (SystemStatusRequest) returns (SystemStatusResponse);
  rpc UpdateGlobalStorage (UpdateStorageRequest) returns (UpdateStorageResponse);
  rpc StreamSystemEvents (StreamEventsRequest) returns (stream SystemEvent);
  rpc ListAllUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc ListAllNodes (ListNodesRequest) returns (ListNodesResponse);
  rpc GetUserDetails (UserDetailsRequest) returns (UserDetailsResponse);
  rpc GetPaymentStats (PaymentStatsRequest) returns (PaymentStatsResponse);
  rpc GetAllPayments (GetAllPaymentsRequest) returns (GetAllPaymentsResponse);
  rpc RefundPayment (RefundPaymentRequest) returns (RefundPaymentResponse);
}

message SystemStatusRequest {
  string admin_key = 1;
}

message SystemStatusResponse {
  bool success = 1;
  int64 global_capacity_bytes = 2;
  int64 global_allocated_bytes = 3;
  int64 global_used_bytes = 4;
  int32 total_users = 5;
  int32 total_nodes = 6;
  int32 online_nodes = 7;
  int64 total_files = 8;
  int64 total_chunks = 9;
  double system_health = 10;
}

message UpdateStorageRequest {
  string admin_key = 1;
  int64 new_capacity_gb = 2;
}

message UpdateStorageResponse {
  bool success = 1;
  string message = 2;
  int64 old_capacity_bytes = 3;
  int64 new_capacity_bytes = 4;
}

message StreamEventsRequest {
  string admin_key = 1;
}

message SystemEvent {
  string event_type = 1;
  string timestamp = 2;
  string message = 3;
  string user_id = 4;
  string details = 5;
}

message ListUsersRequest {
  string admin_key = 1;
}

message ListUsersResponse {
  bool success = 1;
  repeated UserInfo users = 2;
}

message UserInfo {
  string user_id = 1;
  string email = 2;
  string name = 3;
  int64 storage_allocated = 4;
  int64 storage_used = 5;
  string created_at = 6;
  string last_login = 7;
  int32 file_count = 8;
}

message ListNodesRequest {
  string admin_key = 1;
}

message ListNodesResponse {
  bool success = 1;
  repeated NodeInfo nodes = 2;
}

message NodeInfo {
  string node_id = 1;
  string host = 2;
  int32 port = 3;
  int64 storage_capacity = 4;
  int64 storage_used = 5;
  string status = 6;
  string last_heartbeat = 7;
  int32 chunk_count = 8;
  double health_score = 9;
}

message UserDetailsRequest {
  string admin_key = 1;
  string user_id = 2;
}

message UserDetailsResponse {
  bool success = 1;
  UserInfo user = 2;
  repeated FileEntry files = 3;
}

message PaymentStatsRequest {
  string admin_key = 1;
}

message PaymentStatsResponse {
  bool success = 1;
  int64 total_payments = 2;
  int64 completed_payments = 3;
  int64 pending_payments = 4;
  int64 failed_payments = 5;
  int64 total_revenue_xaf = 6;
  int64 total_storage_sold_bytes = 7;
}

message GetAllPaymentsRequest {
  string admin_key = 1;
  int32 limit = 2;
  string status_filter = 3;  // Optional filter
}

message GetAllPaymentsResponse {
  bool success = 1;
  repeated AdminPaymentRecord payments = 2;
}

message AdminPaymentRecord {
  string payment_id = 1;
  string user_email = 2;
  string tier_name = 3;
  int32 amount_xaf = 4;
  int64 storage_bytes = 5;
  string provider = 6;
  string phone_number = 7;
  string status = 8;
  string transaction_ref = 9;
  string created_at = 10;
  string completed_at = 11;
}

message RefundPaymentRequest {
  string admin_key = 1;
  string payment_id = 2;
  string reason = 3;
}

message RefundPaymentResponse {
  bool success = 1;
  string message = 2;
}